# BringingRobotSystem

carry/: package.xml  setup.cfg
carry/carry/: carry_object.py
detect/: setup.cfg  setup.py
detect/detect/: camera_server.py  detection.py  detection2.py  outline_detection.py  setup_stereocamera.py
detect/launch/: color_detection_launch.py  setup_camera_launch.py
import/: package.xml  setup.cfg  setup.py
import/import/: im_sys.py
my_interfaces/: package.xml
my_interfaces/srv/: Carry.srv  Frame.srv
rasptank/: package.xml  setup.cfg  setup.py
rasptank/launch/: color_tracking_launch.py  move_robot_launch.py  self_sim_launch.py
rasptank/rasptank/: capture_video.py  color_tracking.py  copy_color_tracking.py  relay_sim.py  self_sim.py  send_velocity.py  simple_client.py
rasptank/rasptank/control_modules/: RPIservo.py  move.py  test_servo.py
src/carry/: package.xml  setup.py
src/detect/: package.xml  setup.py
src/detect/detect/: camera_server.py
src/detect/launch/: detection_launch.py
src/import/: package.xml
src/my_interfaces/: CMakeLists.txt
src/my_interfaces/srv/: Detect.srv  Grub.srv
src/rasptank_msgs/: CMakeLists.txt  package.xml
src/rasptank_msgs/srv/: Grub.srv  Release.srv
